--- a/practice.html
+++ b/practice.html
@@ -93,7 +93,7 @@
   </header>
 
   <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="learn.html">Learn</a>
     <a href="practice.html">Practice</a>
     <a href="evaluation.html">Evaluation</a>
