--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </header>
 
 <nav>
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="learn.html">Learn</a>
   <a href="practice.html">Practice</a>
   <a href="evaluation.html">Evaluation</a>
