--- a/evaluation.html
+++ b/evaluation.html
@@ -13,25 +13,63 @@
       color: #ffffff;
       margin: 0;
       padding: 0;
+      cursor: none;
+    }
+
+    .custom-cursor {
+      position: fixed;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(0,255,255,0.7) 0%, rgba(0,191,255,0.2) 60%, rgba(0,0,0,0) 100%);
+      pointer-events: none;
+      z-index: 9999;
+      transform: translate(-50%, -50%);
+      transition: transform 0.1s ease-out;
+    }
+
+    .sparkle-text {
+      position: fixed;
+      font-size: 14px;
+      font-weight: bold;
+      font-family: 'Inter', sans-serif;
+      color: #00ffff;
+      pointer-events: none;
+      z-index: 9998;
+      animation: textFade 1s ease-out forwards;
+    }
+
+    @keyframes textFade {
+      0% { opacity: 1; transform: translateY(0); }
+      100% { opacity: 0; transform: translateY(-10px); }
     }
 
     header {
       background: linear-gradient(135deg, #0a0f4b, #1f8df1);
-      color: white;
-      padding: 60px 20px;
+      padding: 80px 20px;
       text-align: center;
     }
 
     header h1 {
-      font-size: 3em;
+      font-size: 3.5rem;
       font-weight: 800;
+      background: linear-gradient(90deg, #00ffe1, #66b3ff, #00ffe1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: floatUpDown 4s ease-in-out infinite;
       margin: 0;
     }
 
     header p {
-      font-size: 1.2em;
-      margin-top: 10px;
-      color: #cce3ff;
+      font-size: 1.2rem;
+      color: #e0f7ff;
+      margin-top: 20px;
+      animation: floatUpDown 4s ease-in-out infinite;
+    }
+
+    @keyframes floatUpDown {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
     nav {
@@ -77,14 +115,19 @@
 
     fieldset {
       border: none;
-      padding: 0;
-      background-color: transparent;
+      padding: 20px;
+      border-radius: 12px;
     }
+
+    fieldset:nth-of-type(1) { background: linear-gradient(to right, #001c38, #003a6b); }
+    fieldset:nth-of-type(2) { background: linear-gradient(to right, #002e4f, #005f99); }
+    fieldset:nth-of-type(3) { background: linear-gradient(to right, #003d5e, #0077c2); }
+    fieldset:nth-of-type(4) { background: linear-gradient(to right, #004970, #0088dd); }
 
     legend {
       font-size: 1.5em;
       font-weight: bold;
-      color: #00b4ff;
+      color: #00ffff;
       margin-bottom: 20px;
     }
 
@@ -94,14 +137,18 @@
       font-weight: 600;
     }
 
-    input[type="text"], select {
+    input[type="text"], select, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 3px;
       font-size: 1em;
       border-radius: 8px;
       border: 1px solid #444;
       background-color: #001c38;
       color: #e0f7ff;
+    }
+
+    textarea {
+      resize: vertical;
     }
 
     input[type="text"]::placeholder {
@@ -114,9 +161,17 @@
       color: #cccccc;
       margin-top: 40px;
     }
+
+    fieldset:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 20px rgb(0, 191, 255);
+      transition: all 0.3s ease;
+    }
+
   </style>
 </head>
 <body>
+  <div class="custom-cursor" id="cursor"></div>
   <header>
     <h1>VIBE Evaluation Hub</h1>
     <p>Track your progress. Reflect. Optimize your coding state.</p>
@@ -130,10 +185,9 @@
   </nav>
 
   <section>
-    <!-- <h2>VIBE Code Evaluation Checklist</h2> -->
     <form>
       <fieldset>
-        <legend>Session Metadata</legend>
+        <legend>🗓️ Session Metadata</legend>
         <label>Date <input type="text" placeholder="YYYY-MM-DD"></label>
         <label>Duration <input type="text" placeholder="e.g. 2h 30min"></label>
         <label>Starting Prompts <input type="text"></label>
@@ -144,7 +198,7 @@
       </fieldset>
 
       <fieldset>
-        <legend>Quantitative Metrics</legend>
+        <legend>🎯 Qualitative Metrics</legend>
         <label>Lines of Code <input type="text"></label>
         <label>Functional Components <input type="text"></label>
         <label>Issues Encountered / Solved <input type="text"></label>
@@ -152,21 +206,14 @@
         <label>Success Rate <input type="text"></label>
         <label>Songs Skipped <input type="text"></label>
         <div style="display: flex; gap: 30px; flex-wrap: nowrap;">
-            <label style="flex: 1; min-width: 0;">Time Debugging
-              <input type="text" placeholder="e.g. 30min" style="width: 100%;">
-            </label>
-            <label style="flex: 1; min-width: 0;">Time Coding
-              <input type="text" placeholder="e.g. 1h" style="width: 100%;">
-            </label>
-            <label style="flex: 1; min-width: 0;">Time Reading
-              <input type="text" placeholder="e.g. 15min" style="width: 100%;">
-            </label>
-          </div>
-          
+          <label style="flex: 1; min-width: 0;">Time Debugging <input type="text" placeholder="e.g. 30min"></label>
+          <label style="flex: 1; min-width: 0;">Time Coding <input type="text" placeholder="e.g. 1h"></label>
+          <label style="flex: 1; min-width: 0;">Time Reading <input type="text" placeholder="e.g. 15min"></label>
+        </div>
       </fieldset>
 
       <fieldset>
-        <legend>Qualitative Ratings (1–10)</legend>
+        <legend>📊 Quantitative Feedback</legend>
         <label>Code Clarity <select><option value="">--</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select></label>
         <label>Productivity <select><option value="">--</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select></label>
         <label>Focus / Flow State <select><option value="">--</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select></label>
@@ -178,16 +225,41 @@
       </fieldset>
 
       <fieldset>
-        <legend>Reflection & Recommendations</legend>
-        <label>What went well? <input type="text"></label>
-        <label>What was frustrating? <input type="text"></label>
-        <label>What should be improved? <input type="text"></label>
-        <label>Music or ritual that worked? <input type="text"></label>
-        <label>Was your goal achieved? <input type="text"></label>
+        <legend>🪞 Reflection & Final Score</legend>
+        <label>What went well? <textarea rows="3"></textarea></label>
+        <label>What was frustrating? <textarea rows="3"></textarea></label>
+        <label>What should be improved? <textarea rows="3"></textarea></label>
+        <label>Music or ritual that worked? <textarea rows="2"></textarea></label>
+        <label>Was your goal achieved? <textarea rows="2"></textarea></label>
         <label>Overall VIBE Score (1–10) <select><option value="">--</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select></label>
       </fieldset>
     </form>
     <p class="tip">✅ Use this checklist to reflect on your session and make each VIBE cycle stronger than the last.</p>
   </section>
+
+  <script>
+    const cursor = document.createElement('div');
+    cursor.className = 'custom-cursor';
+    document.body.appendChild(cursor);
+
+    let lastMoveTime = 0;
+    const delayBetweenWords = 200;
+    document.addEventListener('mousemove', e => {
+      cursor.style.left = e.clientX + 'px';
+      cursor.style.top = e.clientY + 'px';
+
+      const now = Date.now();
+      if (now - lastMoveTime >= delayBetweenWords) {
+        lastMoveTime = now;
+        const word = document.createElement('div');
+        word.className = 'sparkle-text';
+        word.innerText = 'VIBE';
+        word.style.left = `${e.clientX}px`;
+        word.style.top = `${e.clientY}px`;
+        document.body.appendChild(word);
+        setTimeout(() => word.remove(), 1000);
+      }
+    });
+  </script>
 </body>
 </html>
